# homm5-runtime

./: README.md  index.html  package-lock.json  package.json  test.json
editor-tools/: Cargo.toml
editor-tools/src/: error.rs  lib.rs  main.rs  prelude.rs
editor-tools/src/services/: mod.rs  prelude.rs
editor-tools/src/services/banks/: payloads.rs  prelude.rs  repo.rs
editor-tools/src/services/banks/models/: bank.rs  bank_creature_entry.rs  bank_difficulty.rs  bank_variant.rs  mod.rs  prelude.rs
editor-tools/src/services/banks/service/: mod.rs  payloads.rs
editor-tools/src/services/dialog_generator/: mod.rs  payloads.rs  prelude.rs  repo.rs
editor-tools/src/services/dialog_generator/models/: dialog.rs  mod.rs  prelude.rs  speaker.rs  variant.rs
editor-tools/src/services/fight_generator/: mod.rs  payloads.rs  prelude.rs  repo.rs
editor-tools/src/services/fight_generator/models/: army_slot.rs  artifacts.rs  asset.rs  common.rs  mod.rs  prelude.rs  stat_generation.rs
editor-tools/src/services/hero_creator/: mod.rs
editor-tools/src/services/hero_generator/: mod.rs  payloads.rs  prelude.rs  repo.rs
editor-tools/src/services/hero_generator/models/: army_slot.rs  artifacts.rs  asset.rs  common.rs  generatable_hero.rs  mod.rs  prelude.rs  stat_generation.rs
editor-tools/src/services/quest_generator/: payloads.rs  prelude.rs  repo.rs
editor-tools/src/services/quest_generator/models/: mod.rs  prelude.rs  progress.rs  quest.rs
editor-tools/src/services/reserve_hero_creator/: mod.rs  model.rs  payloads.rs  prelude.rs  repo.rs
homm5-repacker/: Cargo.toml
homm5-repacker/src/: lib.rs
homm5-scaner/: Cargo.toml
homm5-scaner/src/: core.rs  error.rs  lib.rs  main.rs  payloads.rs  prelude.rs  query_models.rs  service.rs  utils.rs
homm5-scaner/src/entity/: art.rs  creature.rs  hero.rs  mod.rs  spell.rs
homm5-scaner/src/output/: mod.rs
homm5-scaner/src/pak/: mod.rs
homm5-scaner/src/scaners/: common.rs  mod.rs  prelude.rs  types_scaner.rs
homm5-scaner/src/scaners/ability/: collector.rs  model.rs  prelude.rs  scaner.rs  writer.rs
homm5-scaner/src/scaners/artifact/: collector.rs  mod.rs  model.rs  prelude.rs  scaner.rs  writer.rs
homm5-scaner/src/scaners/creature/: collector.rs  model.rs  prelude.rs  scaner.rs  writer.rs
homm5-scaner/src/scaners/dwelling/: collector.rs  model.rs  prelude.rs  scaner.rs  writer.rs
homm5-scaner/src/scaners/hero/: collector.rs  model.rs  prelude.rs  scaner.rs  writer.rs
homm5-scaner/src/scaners/hero_class/: collector.rs  mod.rs  model.rs  prelude.rs  scaner.rs  writer.rs
homm5-scaner/src/scaners/skill/: collector.rs  mod.rs  model.rs  prelude.rs  scaner.rs  writer.rs
homm5-scaner/src/scaners/spell/: collector.rs  model.rs  prelude.rs  scaner.rs  writer.rs
homm5-types/: Cargo.toml
homm5-types/src/: lib.rs
homm5-types/src/ability/: mod.rs
homm5-types/src/art/: mod.rs
homm5-types/src/building/: mod.rs
homm5-types/src/common/: mod.rs
homm5-types/src/creature/: mod.rs
homm5-types/src/hero/: mod.rs
homm5-types/src/hero_class/: mod.rs
homm5-types/src/player/: mod.rs
homm5-types/src/quest/: mod.rs
homm5-types/src/skill/: mod.rs
homm5-types/src/spell/: mod.rs
homm5-types/src/town/: mod.rs
homm5-types/src/treasure/: mod.rs
map-modifier/: Cargo.toml
map-modifier/src/: error.rs  lib.rs
map-modifier/src/artifacts/: mod.rs
map-modifier/src/buildings/: mod.rs
map-modifier/src/monsters/: mod.rs
map-modifier/src/quest/: mod.rs
runtime-main/: Cargo.toml
runtime-main/src/: frida.js  lib.rs  main.rs
sheets-connector/: Cargo.toml
sheets-connector/app-script/: .clasp.json  code.js
sheets-connector/src/: error.rs  lib.rs  prelude.rs
sheets-connector/src/reader/: mod.rs
sheets-connector/src/service/: mod.rs  types.rs
sheets-connector/src/utils/: mod.rs
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20241214051559_init.sql  20241217045830_update1.sql  20241217055655_update2.sql  20241219042805_update3.sql  20241222053713_update4.sql  20250102084750_dialog_gen_data.sql  20250102124111_dialogs_update1.sql  20250211051742_dialog_already_generated.sql  20250419203214_banks_base.sql  20250423140516_creature_entry.sql  20250501192629_difficulty_separate_table.sql  20250510165756_creature.sql
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  profiles.rs  utils.rs
src-tauri/src/services/: mod.rs  quest.rs
src-tauri/src/services/artifact_editor/: commands.rs
src-tauri/src/services/banks_configurator/: commands.rs  types.rs
src-tauri/src/services/creature_editor/: commands.rs
src-tauri/src/services/creature_generator/: commands.rs  mod.rs  types.rs  utils.rs
src-tauri/src/services/dialog_generator/: commands.rs  data.rs  error.rs  mod.rs  prelude.rs  service.rs
src-tauri/src/services/fight_generator/: commands.rs  utils.rs
src-tauri/src/services/heroes_generator/: commands.rs
src-tauri/src/services/map_editor/: commands.rs
src-tauri/src/services/quest_creator/: commands.rs  data.rs  mod.rs  prelude.rs  service.rs
src-tauri/src/services/reserve_hero_creator/: commands.rs  mod.rs
src-tauri/src/services/sheets_connector/: commands.rs
src-tauri/src/services/spell_editor/: commands.rs
src/components/bank_configurator/: Bank.tsx  BankCreatureSlot.tsx  BankCreaturesInfo.tsx  BankDifficulties.tsx  BankProps.tsx  BankVariantFocused.tsx  BankVariants.tsx  main.tsx  utils.tsx
src/components/body/: index.tsx  styles.module.css
src/components/common/: editableProperty.tsx
src/components/core/: MapSelector.tsx  RepackController.tsx  RuntimeRunner.tsx
src/components/dialog/: Creator.tsx  Generate.tsx  Global.tsx  Initializator.tsx  Loader.tsx  Main.tsx  VariantContorller.tsx  (+1 more)
src/contexts/: AppState.tsx  questCreation.tsx
src/hooks/: useContextMenu.tsx
src/lib/: utils.ts
src/stores/: CurrentDialogStore.ts  DialogsStore.ts  EditorStateStore.ts  GameDataStore.ts  HeroGeneratorStore.ts  HeroGeneratorStore.tsx  QuestStateStore.ts  QuestStore.ts  SpeakersStore.ts  common.ts
(+205 files in other folders)
