[package]
name = "homm5-scaner"
version = "0.1.2"
edition = "2024"
description = "This crate is used for lua scripts generation from homm5 files"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = {version = "0.30.0", features = ["serialize", "serde-types"]}
serde = { version = "1.0", features = ["derive"] }
rc-zip = "2.0.1"
strum = "0.25.0"
strum_macros = "0.25.2"
utf16_reader = "0.1.0"
zip = "0.6.6"
homm5-types = { path = "../homm5-types"}
serde_json = "1.0.111"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
sea-orm = {version = "1.1.11", features = ["sqlx-sqlite"]}
thiserror = "2.0.12"
bincode = { version = "2.0.1", features = ["serde"] }
utf16string = "0.2.0"
itertools = "0.14.0"
roxmltree = "0.20.0"
ordered-float = { version = "5.1.0", features = ["serde"] }
