[package]
name = "map-modifier"
version = "0.1.0"
edition = "2024"


[dependencies]
bincode = "1.3.3"
quick-xml = {version = "0.37.1", features = ["serde", "serde-types", "serialize"]}
serde = { version = "1.0.215", features = ["derive"] }
homm5-types = { path = "../homm5-types"}
tokio = { version = "1.41.1", features = ["fs"] }
