[package]
name = "sheets-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.30.0"
google-sheets4 = "6.0.0"
itertools = "0.14.0"
rust_xlsxwriter = { version = "0.90.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["raw_value"] }
thiserror = "2.0.16"
tokio = "1.47.1"
