[package]
name = "homm5-runtime"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "homm5_runtime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
homm5-types = { path = "../homm5-types"}
homm5-scaner = { path = "../homm5-scaner"}
homm5-repacker = { path = "../homm5-repacker"}
map-modifier = { path = "../map-modifier"}
runtime-main = { path = "../runtime-main"}
strum = { version = "0.26.3", features = ["derive"] }
tauri-plugin-dialog = "2"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "uuid"] }
tokio = { version = "1.42.0", features = ["macros"] }
uuid = { version = "1.11.0", features = ["v4"] }
derive_more = { version = "1.0.0", features = ["full"] }
thiserror = "2.0.9"
bincode = "1.3.3"

[profile.dev.package."*"]
opt-level = 2
