[package]
name = "homm5-runtime"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "homm5_runtime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
homm5-types = { path = "../homm5-types"}
homm5-scaner = { path = "../homm5-scaner"}
homm5-repacker = { path = "../homm5-repacker"}
map-modifier = { path = "../map-modifier"}
runtime-main = { path = "../runtime-main"}
editor-tools = { path = "../editor-tools"}
sheets-connector = { path = "../sheets-connector"}

tauri = { version = "2.7", features = [] }
tauri-plugin-shell = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["raw_value"] }
strum = { version = "0.26.3", features = ["derive"] }
tauri-plugin-dialog = "2.3.2"
tokio = { version = "1.47.1", features = ["macros"] }
uuid = { version = "1.11.0", features = ["v4"] }
derive_more = { version = "1.0.0", features = ["full"] }
thiserror = "2.0.9"
bincode = "1.3.3"
itertools = "0.14.0"
chrono = {version = "0.4.41", features = ["serde"] }
quick-xml = {version = "0.38.0", features = ["serde", "serde-types", "serialize"] }
roxmltree = "0.20.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
filetime = "0.2.26"
zip = "0.6.6"

[profile.dev.package."*"]
opt-level = 2
